# GenAI_Apps

./: .gitignore
ai_book_generator/bookgen/: .gitignore  README.md  pyproject.toml
ai_book_generator/bookgen/src/bookgen/: crew.py  main.py  story.md
ai_book_generator/bookgen/src/bookgen/config/: agents.yaml  tasks.yaml
ai_book_generator/bookgen/src/bookgen/tools/: custom_tool.py
ai_cv_analyser/: LLM.py  README.md  app.py  requirements.txt  util.py
ai_fun_lawyer/: LICENSE  LLM.py  app.py  requirements.txt
ai_newsletter_generator/: test.html
ai_newsletter_generator/gen_newzletter/: .gitignore  README.md  pyproject.toml  report.md
ai_newsletter_generator/gen_newzletter/logs/: 2024-08-07_23-47-25_edit_task.md  2024-08-07_23-47-25_newsletter_task.html  2024-08-07_23-47-25_research_task.md
ai_newsletter_generator/gen_newzletter/src/frontend/: app.py
ai_newsletter_generator/gen_newzletter/src/gen_newzletter/: crew.py  main.py
ai_newsletter_generator/gen_newzletter/src/gen_newzletter/config/: agents.yaml  newsletter_template.html  tasks.yaml
ai_newsletter_generator/gen_newzletter/src/gen_newzletter/tools/: research.py
