[tool.poetry]
name = "bookgen"
version = "0.1.0"
description = "BookGen using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
bookgen = "bookgen.main:run"
train = "bookgen.main:train"
replay = "bookgen.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
