[tool.poetry]
name = "gen_newzletter"
version = "0.1.0"
description = "gen-newzletter using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }
langchain-groq = "^0.1.9"
streamlit = "^1.37.0"

[tool.poetry.scripts]
gen_newzletter = "gen_newzletter.main:run"
train = "gen_newzletter.main:train"
replay = "gen_newzletter.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
